--- a/messaging_app/Dockerfile
+++ b/messaging_app/Dockerfile
@@ -1,11 +1,9 @@
 # messaging_app/Dockerfile
-
-# Use official Python runtime as base image
-FROM python:3.10-slim-buster
+FROM python:3.10-slim-bullseye
 
 # Set environment variables
-ENV PYTHONDONTWRITEBYTECODE 1
-ENV PYTHONUNBUFFERED 1
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
 
 # Set work directory
 WORKDIR /app
@@ -19,16 +17,16 @@ RUN apt-get update \
 # Install Python dependencies
 COPY requirements.txt .
 RUN pip install --upgrade pip \
-    && pip install -r requirements.txt
+    && pip install --no-cache-dir -r requirements.txt
 
 # Copy project
 COPY . .
 
-# Collect static files (if needed for Django)
-RUN python manage.py collectstatic --noinput
+# Collect static files (optional - uncomment if needed)
+# RUN python manage.py collectstatic --noinput
 
 # Expose port
 EXPOSE 8000
 
 # Run the application
-CMD ["gunicorn", "--bind", "0.0.0.0:8000", "messaging_app.wsgi:application"]
+CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
